--- a/portfolio/protfolio.css
+++ b/portfolio/protfolio.css
@@ -66,6 +66,7 @@ section {
     position: relative;
     min-height: 100vh;
     width: 100%;
+     background-image: url(/img/gk.png);
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
