--- a/protfolio.css
+++ b/protfolio.css
@@ -66,7 +66,7 @@ section {
     position: relative;
     min-height: 100vh;
     width: 100%;
-     background-image: url(/img/gk.png);
+     background-image: url(/Assest/gk.png);
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
