--- a/protfolio.css
+++ b/protfolio.css
@@ -66,11 +66,12 @@ section {
     position: relative;
     min-height: 100vh;
     width: 100%;
-    background-image: url(/Assest/gk.png);
+    background-image: url(/img/gk.png);
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
     justify-content: flex-start;
+
 }
 
 .home img {
