--- a/protfolio.css
+++ b/protfolio.css
@@ -27,7 +27,7 @@
     position: relative;
     min-height: 100vh;
     width: 100%;
-    background-image: url(./Assest/gk.png);
+    background-image: url(../Assest/gk.png);
     background-repeat: no-repeat;
     display: flex;
     align-items: center;
