--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /********** Template CSS **********/
+*{
+    font-family: 'Times New Roman', Times, serif;
+}
 :root {
     --primary: #6244C5;
     --secondary: #FFC448;
@@ -209,12 +212,12 @@
 
 /*** About ***/
 #about .years .display-1 {
-    font-size:30px;
+    font-size:3rem;
     line-height: 9rem;
 }
 #about .years .displays-1{
-    font-size:10rem;
-    line-height: 9rem;
+    font-size:50px;
+    line-height: 9px;
 }
 #about .years h5 {
     letter-spacing: 30px;
@@ -298,4 +301,9 @@
 .portfolio-item:hover .portfolio-btn {
     opacity: 1;
     padding-bottom: 30px !important;
+}
+.lh-base{
+    margin-top: 200px;
+    position: relative;
+    right: 240px;
 }
